samples/_failures_safe/1761188066_e2d04f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_533c93d1.c: In function ‘main’:
./samples/SAFE/__tmp_533c93d1.c:125:5: error: expected expression at end of input
  125 |     while (entry_count < MAX_ENTRIES && fgets(line,
      |     ^~~~~
./samples/SAFE/__tmp_533c93d1.c:125:41: error: too few arguments to function ‘fgets’
  125 |     while (entry_count < MAX_ENTRIES && fgets(line,
      |                                         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_533c93d1.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_533c93d1.c:125:5: error: expected declaration or statement at end of input
  125 |     while (entry_count < MAX_ENTRIES && fgets(line,
      |     ^~~~~
